Fixed a bug with the size of the heading on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -1521,13 +1521,13 @@ and (orientation: portrait){
         }
 
 @media (max-width: 1100px){
-    .dp-heading .heading {
+    #header .heading {
         font-size: 2.5em;
             }
         }
 
 @media (max-device-width: 500px){
-    .dp-heading .heading {
+    #header .heading {
         font-size: 2.2em;
             }
         }
